--- a/Windows-Client/requirements.txt
+++ b/Windows-Client/requirements.txt
@@ -12,6 +12,7 @@ keyboard==0.13.5
 pystray==0.19.5
 configparser==6.0.1
 cryptography==43.0.1
+numpy==1.24.3
 
 # Alternative installation notes:
 # If PyQt5 installation fails, try:
