--- a/OCR/pytest.ini
+++ b/OCR/pytest.ini
@@ -1,8 +1,9 @@
 [tool:pytest]
-testpaths = tests
+testpaths = .
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+asyncio_mode = auto
 addopts = 
     -v
     --strict-markers
