--- a/env.example
+++ b/env.example
@@ -23,5 +23,9 @@ LETSENCRYPT_EMAIL=patrick@korczewski.de
 # Replace with your actual OpenAI API key
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Gemini API Configuration
+# Replace with your actual Gemini API key
+GEMINI_API_KEY=your_gemini_api_key_here
+
 # Redis Configuration
 REDIS_URL=redis://redis:6379 
