--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -14,12 +14,15 @@ entryPoints:
 
   websecure:
     address: ":443"
+    
+  traefik:
+    address: ":8080"
 
 providers:
   docker:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
-    network: screenshot-network
+    network: screenshotocr_screenshot-network
 
   file:
     filename: /etc/traefik/dynamic.yml
