--- a/web/DOCKERFILE
+++ b/web/DOCKERFILE
@@ -4,7 +4,7 @@ WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-RUN npm install --only=production
+RUN npm ci
 
 # Copy source code
 COPY . .
